# resume

./: .gitignore  CNAME  Makefile  README.md  components.json  index.html  mkdocs.yml  package-lock.json  package.json  pdf.py  pyproject.toml  requirements.txt  resume.py  sitemap.xml  tailwind.config.js  vite.config.js
.github/workflows/: ci.yml  deploy.yaml
docs/: index.md
docs/theme/: index.html
search/: search_index.json
src/: App.vue  main.js
src/assets/: index.css
src/components/icons/: GithubIcon.vue  GlobeIcon.vue  LinkedinIcon.vue  MailIcon.vue  PhoneIcon.vue  TerminalIcon.vue  index.js
src/components/ui/avatar/: Avatar.vue
src/data/: index.js
theme/: index.html
