[tool.poetry]
name = "resume"
version = "0.1.0"
description = "My resume"
authors = ["Ozcan Yarimdunya <ozcanyd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.0"
pdfkit = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
